add vector version of Floflis social avatar/pfp

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -530,8 +530,8 @@
     </div>
     <div class="col-sm">
 <h4>Social avatar</h4>
-<img width="256px" src="./press/press-kit/img/Floflis avatar.png">
-<br/><a href="./press/press-kit/img/Floflis avatar.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/Floflis avatar.svg">
+<br/><a href="./press/press-kit/img/Floflis avatar.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/Floflis avatar.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon Floflis for <a href="https://c2.frameworkjs.eth.link/" target="_blank">Construct 2</a></h4>
@@ -596,7 +596,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sat Apr 29 22:49 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Tue May 02 18:40 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
