add Library icons

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -551,6 +551,76 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon Folder Home</h4>
+<img width="456px" src="./press/press-kit/img/reused/user-home.svg">
+<br/><a href="./press/press-kit/img/reused/user-home.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon Folder Music</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-music.svg">
+<br/><a href="./press/press-kit/img/reused/folder-music.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder Videos</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-videos.svg">
+<br/><a href="./press/press-kit/img/reused/folder-videos.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder Pictures</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-pictures.svg">
+<br/><a href="./press/press-kit/img/reused/folder-pictures.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon Folder Downloads</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-download.svg">
+<br/><a href="./press/press-kit/img/reused/folder-download.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder Documents</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-documents.svg">
+<br/><a href="./press/press-kit/img/reused/folder-documents.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder Dropbox</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-dropbox.svg">
+<br/><a href="./press/press-kit/img/reused/folder-dropbox.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon Folder InSync</h4>
+<img width="256px" src="./press/press-kit/img/reused/insync-folder.svg">
+<br/><a href="./press/press-kit/img/reused/insync-folder.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder Templates</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-templates.svg">
+<br/><a href="./press/press-kit/img/reused/folder-templates.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon Folder PublicShare</h4>
+<img width="256px" src="./press/press-kit/img/reused/folder-publicshare.svg">
+<br/><a href="./press/press-kit/img/reused/folder-publicshare.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
 <br/>
 <hr/>
 
@@ -596,7 +666,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu May 04 18:11 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Thu May 04 18:39 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
