--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -448,8 +448,8 @@
     <div class="col-sm">
 <h4>Icon .nu files</h4>
 <p>Based off Ubuntu's Yaru icon for bash files</p>
-<img width="256px" src="./press/press-kit/img/reused/application-x-nu.png">
-<br/><a href="./press/press-kit/img/reused/application-x-nu.png" target="_blank">PNG</a>
+<img width="256px" src="./press/press-kit/img/reused/application-x-nu.svg">
+<br/><a href="./press/press-kit/img/reused/application-x-nu.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon .apps files</h4>
@@ -666,7 +666,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu May 04 18:39 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Thu May 04 18:41 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
