updt floapps mimetype (.apps, .game, .html5) icons (and remove PNG version)

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -453,8 +453,8 @@
     </div>
     <div class="col-sm">
 <h4>Icon .apps files</h4>
-<img width="256px" src="./press/press-kit/img/reused/application-x-apps.png">
-<br/><a href="./press/press-kit/img/reused/application-x-apps.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/reused/application-x-apps.svg" target="_blank">SVG</a>
+<img width="256px" src="./press/press-kit/img/reused/application-x-apps.svg">
+<br/><a href="./press/press-kit/img/reused/application-x-apps.svg" target="_blank">SVG</a>
     </div>
   </div>
 </div>
@@ -463,13 +463,13 @@
   <div class="row">
     <div class="col-sm">
 <h4>Icon .game files</h4>
-<img width="256px" src="./press/press-kit/img/reused/application-x-game.png">
-<br/><a href="./press/press-kit/img/reused/application-x-game.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/reused/application-x-game.svg" target="_blank">SVG</a>
+<img width="256px" src="./press/press-kit/img/reused/application-x-game.svg">
+<br/><a href="./press/press-kit/img/reused/application-x-game.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon .html5 files</h4>
-<img width="256px" src="./press/press-kit/img/reused/application-x-html5.png">
-<br/><a href="./press/press-kit/img/reused/application-x-html5.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/reused/application-x-html5.svg" target="_blank">SVG</a>
+<img width="256px" src="./press/press-kit/img/reused/application-x-html5.svg">
+<br/><a href="./press/press-kit/img/reused/application-x-html5.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
 <h4>Icon .usv files</h4>
