add mimetype icons for Witchlink, GIPFS and FilePeace

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -621,6 +621,46 @@
   </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon .cid files</h4>
+<img width="256px" src="./press/press-kit/img/reused/text-x-cid.svg">
+<br/><a href="./press/press-kit/img/reused/text-x-cid.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon .wl files</h4>
+<img width="256px" src="./press/press-kit/img/reused/application-x-wl.svg">
+<br/><a href="./press/press-kit/img/reused/application-x-wl.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon .md5/.md5sum files</h4>
+<img width="256px" src="./press/press-kit/img/reused/text-x-md5.svg">
+<br/><a href="./press/press-kit/img/reused/text-x-md5.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+<h4>Icon .sha256/.sha256sum files</h4>
+<img width="256px" src="./press/press-kit/img/reused/text-x-sha256.svg">
+<br/><a href="./press/press-kit/img/reused/text-x-sha256.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon .webpresent files</h4>
+<img width="256px" src="./press/press-kit/img/reused/text-x-webpresent.svg">
+<br/><a href="./press/press-kit/img/reused/text-x-webpresent.svg" target="_blank">SVG</a>
+    </div>
+    <div class="col-sm">
+<h4>Icon .weborigin files</h4>
+<img width="256px" src="./press/press-kit/img/reused/text-x-weborigin.svg">
+<br/><a href="./press/press-kit/img/reused/text-x-weborigin.svg" target="_blank">SVG</a>
+    </div>
+  </div>
+</div>
+
 <br/>
 <hr/>
 
@@ -666,7 +706,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu May 04 18:41 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Thu May 04 18:53 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
