fix Nushell GIF

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/50749515?s=200&v=4"> <b>Shell</b></h2>
 <p>Floflis have replaced Bash by a modern and faster shell: <a href="https://github.com/nushell/nushell" target="_blank">nu</a>.</p>
 <p>But <b>don't worry</b>: your loved bash scripts will still work!</p>
-<img width="440px" src="https://github.com/nushell/nushell/raw/main/images/nushell-autocomplete6.gif">
+<img width="440px" src="https://raw.githubusercontent.com/nushell/nushell/main/assets/nushell-autocomplete6.gif">
     </div>
     <div class="col">
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/49654870?s=200&v=4"> <b>Prompt 👩‍🚀</b></h2>
@@ -266,7 +266,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sat Apr 29 22:43 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat May 20 29:27 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
