re-structure /press page, inspired from Plasmmer's site

--- a/press/press-kit/index.html
+++ b/press/press-kit/index.html
@@ -64,12 +64,12 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Logo Platform</h5>
+<h5>Logotype Platform</h5>
 <img width="315px" src="./logotype.svg">
 <br/><a href="./logotype.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Logo - 1-color (black)</h5>
+<h5>Logotype 1-color (plain) Black</h5>
 <img width="315px" src="./os/logotype_black.svg">
 <br/><a href="./os/logotype_black.svg" target="_blank">SVG</a>
     </div>
@@ -81,17 +81,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Logo - 1-color (blue)</h5>
+<h5>Logotype 1-color (plain) Blue</h5>
 <img width="315px" src="./os/logotype.svg">
 <br/><a href="./os/logotype.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Logo - 1-color (white)</h5>
+<h5>Logotype 1-color (plain) White</h5>
 <img width="315px" src="./os/logotype_white.svg">
 <br/><a href="./os/logotype_white.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Logo - colored</h5>
+<h5>Logotype - Colored</h5>
 <img width="315px" src="./press/press-kit/img/logotype_colored.svg">
 <br/><a href="./press/press-kit/img/logotype_colored.svg" target="_blank">SVG</a>
     </div>
@@ -101,17 +101,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Logo - 1-color (gray)</h5>
+<h5>Logotype 1-color (plain) Gray</h5>
 <img width="315px" src="./press/press-kit/img/logotype_gray.svg">
 <br/><a href="./press/press-kit/img/logotype_gray.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Logo - 1-color (yellow)</h5>
+<h5>Logotype 1-color (plain) Yellow</h5>
 <img width="315px" src="./press/press-kit/img/logotype_yellow.svg">
 <br/><a href="./press/press-kit/img/logotype_yellow.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Logo - Floflis 19</h5>
+<h5>Logotype - Floflis 19</h5>
 <img width="315px" src="./press/press-kit/img/OSlogotype.png">
 <br/><a href="./press/press-kit/img/OSlogotype.png" target="_blank">PNG</a> | <a href="./press/press-kit/img/OSlogotype.svg" target="_blank">SVG</a>
     </div>
@@ -131,17 +131,17 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Icon - 1-color (black)</h5>
+<h5>Icon 1-color (plain) Black</h5>
 <img width="256px" src="./os/logo_flat_black.svg">
 <br/><a href="./os/logo_flat_black.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Icon - 1-color (blue)</h5>
+<h5>Icon 1-color (plain) Blue</h5>
 <img width="256px" src="./os/logo_flat.svg">
 <br/><a href="./os/logo_flat.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Icon - 1-color (white)</h5>
+<h5>Icon 1-color (plain) White</h5>
 <img width="256px" src="./os/logo_flat_white.svg">
 <br/><a href="./os/logo_flat_white.svg" target="_blank">SVG</a>
     </div>
@@ -161,7 +161,7 @@
 <br/><a href="./press/press-kit/img/icon_colored-lined.svg" target="_blank">SVG</a>
     </div>
     <div class="col-sm">
-<h5>Icon - 1-color (gray)</h5>
+<h5>Icon 1-color (plain) Gray</h5>
 <img width="315px" src="./press/press-kit/img/icon_gray.svg">
 <br/><a href="./press/press-kit/img/icon_gray.svg" target="_blank">SVG</a>
     </div>
@@ -171,7 +171,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm">
-<h5>Icon - 1-color (yellow)</h5>
+<h5>Icon 1-color (plain) Yellow</h5>
 <img width="315px" src="./press/press-kit/img/icon_yellow.svg">
 <br/><a href="./press/press-kit/img/icon_yellow.svg" target="_blank">SVG</a>
     </div>
@@ -706,7 +706,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Thu May 04 18:53 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sat May 20 23:19 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
