--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <link rel="stylesheet" type="text/css" href="css/app-common.css">
 <link rel="stylesheet" type="text/css" href="css/page-custom.css">
 <link rel="stylesheet" type="text/css" href="css/app-custom.css">
-<link href="Fonts/Cabin/font.css" rel="stylesheet">
-<link href="Fonts/Roboto/font.css" rel="stylesheet">
-<link href="Fonts/Material Icons/font.css" rel="stylesheet">
+<link href="fonts/Cabin/font.css" rel="stylesheet">
+<link href="fonts/Roboto/font.css" rel="stylesheet">
+<link href="fonts/Material Icons/font.css" rel="stylesheet">
 <meta name="pehtml" content="true">
 <meta name="directory" content="css, js, img, snd">
 <meta name="description" content="">
@@ -266,7 +266,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sat May 20 29:27 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sun May 21 29:27 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
