--- a/about/socialnetworks/index.html
+++ b/about/socialnetworks/index.html
@@ -35,7 +35,7 @@
 <ul style="
     overflow: hidden!important;
 ">
-<a href="././"><li><!--<div><i class="material-icons">book</i></div>--><p>Home</p></li></a>
+<a href="././"><li><div><i class="material-icons">home</i></div><p>Home</p></li></a>
 <!--<a href=""><li><div><i class="material-icons">widgets</i></div><p>Elements</p></li></a>-->
 <a href="./os"><li><!--<div><i class="material-icons">book</i></div>--><p>FloflisOS</p></li></a>
 <a href="./press"><li><!--<div><i class="material-icons">book</i></div>--><p>Press</p></li></a>
@@ -71,7 +71,7 @@
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sun May 21 18:08 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Sun May 21 18:15 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
