--- a/about/socialnetworks/index.html
+++ b/about/socialnetworks/index.html
@@ -24,8 +24,8 @@
 <link href="fonts/Material Icons/font.css" rel="stylesheet">
 <meta name="pehtml" content="true">
 <meta name="directory" content="css, js, img, snd">
-<meta name="description" content="">
-  <meta name="keywords" content="video, format, png, svg, flac, ogg, tar.gz-archives, usv, tar.gz">
+<meta name="description" content="The edge of modern computing. Rust everywhere: Rust from the shell to the prompt; from the prompt to the programs. Floflis is an ecosystem which can be a standalone OS (Linux or any other open kernel) or run as a platform inside any other OS/distro.">
+  <meta name="keywords" content="linux, distro, ubuntu, rust, cinnamon, web3, ethereum, nfts, daos">
  </head>
 <body id="body">
 <div id="app">
@@ -71,7 +71,7 @@
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Sun May 21 18:19 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Wed Jun 28 14:41 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
