--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="content">
 <article>
-<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform" width="420px"/><br/><h1>AI-first, Web3-first, Rust-first: THE FUTURE-FIRST OS.</h1><h3></h3>
+<center><img class="img-fluid" width="500px" src="banner.png"/><br/><img class="img-fluid" src="logotype.svg" title="Floflis Platform" alt="Floflis Platform" width="420px"/><br/><h1>Rust-first, AI-first, Web3-first: THE FUTURE-FIRST OS.</h1><h3></h3>
 <hr/>
 
 <h2>Rust everywhere 🦀</h2>
@@ -55,7 +55,7 @@
   <div class="row">
     <div class="col">
 <h2><img width="32px" src="https://avatars.githubusercontent.com/u/50749515?s=200&v=4"> <b>Shell</b></h2>
-<p>Floflis have replaced Bash by a modern and faster shell: <a href="https://github.com/nushell/nushell" target="_blank">nu</a>.</p>
+<p>Floflis have replaced Bash by a fast, modern shell: <a href="https://github.com/nushell/nushell" target="_blank">nu</a>.</p>
 <p>But <b>don't worry</b>: your loved bash scripts will still work!</p>
 <img width="440px" src="https://raw.githubusercontent.com/nushell/nushell/main/assets/nushell-autocomplete6.gif">
     </div>
@@ -66,6 +66,14 @@
     </div>
   </div>
 </div>
+
+<hr/>
+
+<div class="area" style="position: relative;width: 100%;border-top: 1px solid #9a9a9a;background: #000;padding: 10px; color:#fff">
+<center>    <h1>Our projects:</h1>
+<a href="https://filepeace.github.io" target="_blank" style="padding-right:15px"><img src="https://filepeace.github.io/press/press-kit/img/logotype-plain_white.svg" style="opacity: 0.7;" width="300px"></a>
+</center>
+<hr></div>
 
 <hr/>
 
@@ -169,17 +177,17 @@ width: 82%;
 
 <div class="container">
   <div class="row">
-    <div class="col">
+    <!--<div class="col">
 <div class="card" style="width: 18rem;">
   <img width="100%" class="card-img-top" src="./press/press-kit/img/html5apps.png" alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">HTML5Apps Platform</h5>
     <p class="card-text">Fully featured web apps platform, that can bring Floflis as a graphical app to any OS <small>(Android, Windows, Linux, MacOS, etc)</small>.</p>
     <p class="card-text">It is like PortableApps Platform; can run <a href="https://github.com/Floflis/Floflis-Central" target="_blank">Floflis Central</a> and any other Electron app, but using the same runtime: so apps which had thousand megabytes will have just a few kilobytes.</p><br/><small>Still in development. See it on <a href="https://github.com/html5appsplatform/HTML5Apps-Platform" target="blank">GitHub</a> or take a glance at its <a href="https://ipfs.io/ipfs/QmZezYgLWk2m6HHdsWdZfn7irbY7cra663BuZJ7RrZKgeQ/" target="blank">in-development</a> site</small>.
-    <!--<a href="" target="blank" class="btn btn-primary">Access</a>-->
+    <a href="" target="blank" class="btn btn-primary">Access</a>
   </div>
 </div>
-    </div>
+    </div>-->
     <div class="col">
 <div class="card" style="width: 18rem;">
   <img width="100%" class="card-img-top" src="https://gateway.pinata.cloud/ipfs/QmRYcXCF4ADCHh3oMo3mdQ1UW1X4p3hdoj4HPjRekipDs1" alt="Card image cap">
@@ -266,7 +274,7 @@ width: 82%;
 
 </article>
 <footer><div class="footer-shadow"></div>
-<center>Last update in Mon Dec 11 18:23 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
+<center>Last update in Fri Jul 12 02:48 2023 -0300. <a href="http://status.floflis.com/" target="_blank">Status</a>.</center><a href="https://framework.js.org/" target="blank"><img src="https://img.shields.io/badge/built%20with-Framework.js%20(r1)-00A185.svg"></a><!--<a href="https://plasnerd.github.io/PEHTML/" target="blank"><img src="https://plasnerd.github.io/PEHTML/img/seal-2.png" width="167px" height="94px" style="-webkit-user-drag:element"></a>-->
 <div class="social-icons">
 <a href="https://twitter.com/FloflisOS" target="blank"><img src="img/social/twitter.svg" width="40px" height="40px" title="Follow us and receive latest news feed about Floflis progress and other development tools" alt="Twitter"></a>
 <a href="https://tiktok.com/@floflisos" target="blank"><img src="img/social/tiktok.svg" width="40px" height="40px" title="Watch our videos with news/tutorials" alt="Youtube" class="round"></a>
@@ -279,7 +287,7 @@ width: 82%;
 <a href="https://github.com/Floflis" target="blank"><img src="img/social/github.svg" width="40px" height="40px" title="See first the news and improve Floflis in GitHub" alt="GitHub"></a>
 <a href="https://gitlab.com/floflis" target="blank"><img src="img/social/gitlab.svg" title="See first the news and improve Floflis in GitLab" alt="GitLab" class="round" width="40px" height="40px"></a><!-- <a href="https://facebook.com/" target="blank"><img src="img/social/facebook.svg" width="40px" height="40px" title="Like us and receive latest news feed about FrameworkJS progress and other development tools" alt="Facebook"></a>--><a href="https://opencollective.com/floflis" target="blank"><img src="img/social/opencollective.svg" width="40px" height="40px" title="Contribute to Floflis in Open Collective" alt="Twitter"></a><!--<a href="https://.deviantart.com" target="blank"><img src="img/social/deviantart.svg" width="40px" height="40px" title="Follow us and receive latest backgrounds, designs and apps" alt="Deviantart"></a>--></div>
 <div class="social-buttons"></div>
-<copyright><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/>(c) 2017-2023 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>--><a href="https://plasmmer.com/" style="opacity: unset;"><img height="16px" alt="Plasmmer DAO" src="https://plasmmer.com/press/press-kit/img/logotype-plain_black.svg" title="Plasmmer DAO"></a>. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
+<copyright><center><a href="https://aragon.plasmmer.com/#/floflis/" target="_blank"><img width="350px" src="img/5d30129fbe8118efde2a8a25_Badge Dark.svg"/></a><br/><small>2011-&gt;</small> (c) 2019-2024 Floflis Platform <a href="https://aragon.plasmmer.com/#/floflis/" target="_blank">DAO</a> by <!--<a href="https://plasmmer.com" target="blank">Plasmmer DAO</a>--><a href="https://plasmmer.com/" style="opacity: unset;"><img height="16px" alt="Plasmmer DAO" src="https://plasmmer.com/press/press-kit/img/logotype-plain_black.svg" title="Plasmmer DAO"></a>. Illustrations from <a href="https://undraw.co/" target="blank">UnDraw</a>.</center></copyright>
 </footer>
 </div>
 </div>
